test/fixtures/commonmark/bad.txt
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 410

.
>		foo
.
<blockquote>
<pre><code>  foo
</code></pre>
</blockquote>
.

error:

<blockquote>
<pre><code>	foo
</code></pre>
</blockquote>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4214

.
foo
*

foo
1.
.
<p>foo
*</p>
<p>foo
1.</p>
.

error:

<p>foo</p>
<ul>
<li></li>
</ul>
<p>foo</p>
<ol>
<li></li>
</ol>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4866

.
The number of windows in my house is
14.  The number of doors is 6.
.
<p>The number of windows in my house is
14.  The number of doors is 6.</p>
.

error:

<p>The number of windows in my house is</p>
<ol start="14">
<li>The number of doors is 6.</li>
</ol>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 6137

.
*foo bar
*
.
<p>*foo bar
*</p>
.

error:

<p>*foo bar</p>
<ul>
<li></li>
</ul>


